# Process this file with automake to create Makefile.in

SUBDIRS = . src 
DIST_SUBDIRS = . doc src 

EXTRA_DIST = bootstrap depcomp 

MAINTAINERCLEANFILES = \
	Makefile.in config.h.in configure \
	install-sh ltmain.sh missing mkinstalldirs \
	compile depcomp config.log config.status \
	config.guess config.sub acinclude.m4 aclocal.m4

DEPCLEANFILES = config.log configure

AUTOMAKE_OPTIONS = foreign 1.5
