MAINTAINERCLEANFILES = \
	Makefile.in

OPENSSL_EXTRA_CFLAGS = \
	-DOPENSSL_THREADS -D_REENTRANT -DDSO_DLFCN -DHAVE_DLFCN_H \
	-DOPENSSL_NO_KRB5 -DL_ENDIAN -DTERMIO -DENGINE_DYNAMIC_SUPPORT \
	-DSHA1_ASM -DMD5_ASM -DRMD160_ASM
AM_CFLAGS = $(OPENSSL_EXTRA_CFLAGS) $(OPENSSL_CFLAGS)
LDADD = $(OPENSSL_LIBS)
AM_LDFLAGS = $(OPENSSL_EXTRA_LDFLAGS)

noinst_PROGRAMS = load_ssl_client_cert

load_ssl_client_cert_SOURCES = load_ssl_client_cert.c

